# vitriona

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  cfg.py  di_container.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260417A_initial_schema.py  20260419A_refresh_token_hash.py  20260420A_add_is_admin_to_users.py  20260420B_drop_session_csrf_token.py  20260420C_add_session_history_fields.py  20260420D_encrypt_affise_credentials.py  2026_04_17_000001_initial_schema.py  2026_04_19_000002_refresh_token_hash.py  2026_04_20_000003_add_is_admin_to_users.py  2026_04_20_000004_drop_session_csrf_token.py  2026_04_20_000005_add_session_history_fields.py
backend/src/app/: main.py
backend/src/app/api/: admin.py  auth.py  client.py  meta.py
backend/src/app/core/: auth_sessions.py  config.py  db.py  dependencies.py  rate_limit.py  security.py
backend/src/app/schemas/: __init__.py  admin.py  auth.py  client.py
backend/src/app/services/: __init__.py  affise.py  auth_session.py  crypto.py  geoip.py  landing.py  mail.py  security.py
backend/src/infrastructure/models/: __init__.py  domain.py  offer.py  offer_source.py  partner_offer.py  pin_code.py  session.py  showcase.py  user.py
backend/src/infrastructure/repositories/: _base_repository.py  domain_repository.py  offer_repository.py  offer_source_repository.py  partner_offer_repository.py  pin_code_repository.py  session_repository.py  showcase_repository.py  user_repository.py
frontend/: Dockerfile  index.html  (+5 more)
(+51 files in other folders)
